#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package DmTapeRestorea
#------------------------------------------------------------------------

Package author: Wilko Kroeger

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-00
2015-05-26
- renamed tools to use common prefix (dmt)
	
Tag: V00-00-01
2015-03-18 Wilko Kroeger
- just created this template file, this entry is an example of the change log
  entry
- keep it brief and easy to read
- always include author name and date of the change, provide CVS tag when 
  appropriate
